2005-01-24  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Added Precision Mini Model HA513A, reported by Alexander Bostrom.
		     get_info_func() added, patch from Alexander Bostrom 
		     <alexander@bostrom.net>

2005-01-17  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Argus DC-1610/20 do not currently work; commented out.


2005-01-14  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Added Argus DC-1610 and DC-1620.


2004-12-22  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c (camera_manual): fixed some trigraph issues.

2004-10-26  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: ID for Haimei HE-501A, reported by
		     Scott MacKenzie <irrational@poboxes.com>  
		     ID for Elta Medi@ digicam, reported by
		     Nils Naumann, <nau@gmx.net>
		     Support patch submitted by Scott, tested by Nils.
	* mars.c:    Scott's patch applied. 
	* protocol.txt: byte codes for new 352x288 and 176x144 resolution 
			settings recorded; section "UPDATES and REVISIONS" added. 	     


2004-09-04  Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Vivitar Vivicam 55 added. Credits to 
		     Sebastien Soilen <sebastien@soilen.net>
	* mars.c:    init sequence improved; thanks to Sebastien		     
		     for intensive testing. 	


2004-06-09  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: support for thumbnails; gtkam works now
	* mars.c: choice routine for gamma factor 
	* mars.h: choice routine for gamma factor 
	* README: support for gtkam described


2004-05-18  Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Model Emprex PCD3800 added. Credits to 
		     Hisham Muhammad <hisham@apple2.com> 


2004-05-02  Theodore Kilgore <kilgota@auburn.edu>

	* mars.c:    Minor changes to lessen memory footprint.
	* library.c: Minor changes to lessen memory footprint.

2004-05-01  Theodore Kilgore <kilgota@auburn.edu>

	* *.[c,h]: First check-in. 